--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
-    "prepare": "husky install",
+    "prepare": "cd .. && husky install app/.husky",
     "lint": "npm run lint:js && npm run lint:style",
     "test": "jest"
   },
