--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path ../.gitignore .",
+    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path ../.gitignore",
     "prepare": "cd .. && husky install app/.husky",
     "lint": "npm run lint:js && npm run lint:style",
     "test": "jest"
@@ -17,13 +17,13 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@typescript-eslint/parser": "^4.32.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
