ci: change workflow trigger

--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -1,9 +1,10 @@
 name: Build and Push Container to ECR, deploy to lambda
 
-on:
-  workflow_dispatch:
-  push:
-    branches: [main]
+on: [push, pull_request]
+
+  # workflow_dispatch:
+  # push:
+  #   branches: [main]
 
 env:
   GITHUB_SHA: ${{ github.sha }}
