--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@typescript-eslint/parser": "^4.32.0",
+    "aws-serverless-express": "^3.4.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "typescript": "^4.4.3"
