--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "deploy": "npm run build && sls deploy",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path ../.gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path ../.gitignore",
     "prepare": "cd .. && husky install app/.husky",
@@ -18,8 +19,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@typescript-eslint/parser": "^4.32.0",
-    "aws-serverless-express": "^3.4.0",
     "core-js": "^3.15.1",
+    "express": "^4.17.1",
     "nuxt": "^2.15.7",
     "typescript": "^4.4.3"
   },
@@ -31,6 +32,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
+    "@vendia/serverless-express": "^4.5.2",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
@@ -42,6 +44,7 @@
     "jest": "^27.0.5",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "serverless-apigw-binary": "^0.4.4",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
