--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.15.1",
     "express": "^4.17.1",
     "nuxt": "^2.15.7",
+    "nuxt-start": "^2.15.8",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
@@ -45,7 +46,9 @@
     "jest": "^27.0.5",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "serverless": "^2.67.0",
     "serverless-apigw-binary": "^0.4.4",
+    "serverless-offline": "^8.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
