chore: updated package lock, ts config, and dockerfile

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "noImplicitAny": false, // build issues with typescript and aws lambda
+    "useUnknownInCatchVariables": false, // build issues with typescript and aws lambda
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Node",
