--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,9 @@
     "@typescript-eslint/parser": "^4.32.0",
     "contentful": "^9.1.4",
     "core-js": "^3.15.1",
+    "express": "^4.17.1",
     "nuxt": "^2.15.7",
+    "nuxt-start": "^2.15.8",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
+    "@vendia/serverless-express": "^4.5.2",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
@@ -42,6 +45,9 @@
     "jest": "^27.0.5",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "serverless": "^2.67.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-offline": "^8.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
