--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -29,7 +29,8 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@nuxt/content",
-      "@types/node"
+      "@nuxtjs/i18n",
+      "@types/node",
     ]
   },
   "exclude": [
