--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "storybook": "nuxt storybook",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path ../.gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path ../.gitignore",
     "prepare": "cd .. && husky install app/.husky",
@@ -24,7 +25,7 @@
     "express": "^4.17.1",
     "nuxt": "^2.15.7",
     "nuxt-start": "^2.15.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -32,6 +33,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/storybook": "^4.2.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@vendia/serverless-express": "^4.5.2",
@@ -44,7 +46,7 @@
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^6.0.0",
     "jest": "^27.0.5",
-    "postcss": "^8.3.5",
+    "postcss": "^8.4.5",
     "prettier": "^2.3.2",
     "serverless": "^2.67.0",
     "serverless-apigw-binary": "^0.4.4",
