--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -9,11 +9,11 @@ env:
   TERRAFORM_VERSION: 1.0.3
   TERRAGRUNT_VERSION: v0.31.1
   CONFTEST_VERSION: 0.27.0
-  TF_VAR_rds_password: ${{ secrets.TF_VARS_RDS_PASSWORD }}
-  TF_VAR_fastapi_secret_key: ${{ secrets.TF_VARS_FASTAPI_SECRET_KEY }}
-  TF_VAR_google_client_id: ${{ secrets.TF_VARS_GOOGLE_CLIENT_ID }}
-  TF_VAR_google_client_secret: ${{ secrets.TF_VARS_GOOGLE_CLIENT_SECRET }}
-  TF_VAR_slack_webhook_url: ${{ secrets.TF_VARS_SLACK_WEBHOOK_URL }}
+  # TF_VAR_rds_password: ${{ secrets.TF_VARS_RDS_PASSWORD }}
+  # TF_VAR_fastapi_secret_key: ${{ secrets.TF_VARS_FASTAPI_SECRET_KEY }}
+  # TF_VAR_google_client_id: ${{ secrets.TF_VARS_GOOGLE_CLIENT_ID }}
+  # TF_VAR_google_client_secret: ${{ secrets.TF_VARS_GOOGLE_CLIENT_SECRET }}
+  # TF_VAR_slack_webhook_url: ${{ secrets.TF_VARS_SLACK_WEBHOOK_URL }}
 
 permissions:
   id-token: write
@@ -31,14 +31,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - module: alarms
-          - module: api
-          - module: hosted_zone
-          - module: ecs
-          - module: scanners/axe-core
-          - module: orchestrator
-          - module: scanners/github
-          - module: tf_roles
+          - module: staging
+          - module: common
+      #     - module: hosted_zone
+      #     - module: ecs
+      #     - module: scanners/axe-core
+      #     - module: orchestrator
+      #     - module: scanners/github
+      #     - module: tf_roles
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -68,7 +68,7 @@ jobs:
       - name: configure aws credentials using OIDC
         uses: aws-actions/configure-aws-credentials@master
         with:
-          role-to-assume: arn:aws:iam::507252742351:role/gh_plan_role
+          role-to-assume: arn:aws:iam::236007890657:role/gh_plan_role
           role-session-name: TFPlan
           aws-region: 'ca-central-1'
 
@@ -77,6 +77,6 @@ jobs:
         with:
           comment-delete: true
           comment-title: Plan for ${{ matrix.module }}
-          directory: ./terragrunt/env/${{ matrix.module }}
+          directory: ./infrastructure/terragrunt/env/${{ matrix.module }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           terragrunt: true
