ci: use same creds as build

--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -68,8 +68,10 @@ jobs:
       - name: configure aws credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::236007890657:role/gh_plan_role
-          role-session-name: TFPlan
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # role-to-assume: arn:aws:iam::236007890657:role/gh_plan_role
+          # role-session-name: TFPlan
           aws-region: 'ca-central-1'
 
       - name: Terraform plan
