ci: comment out staging app for tfplan

--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -83,11 +83,11 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           terragrunt: true
 
-      - name: Terraform plan staging hosted zone
-        uses: cds-snc/terraform-plan@v2
-        with:
-          comment-delete: true
-          comment-title: TF Plan for app
-          directory: infrastructure/terragrunt/env/staging/app
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          terragrunt: true
+      # - name: Terraform plan staging app
+      #   uses: cds-snc/terraform-plan@v2
+      #   with:
+      #     comment-delete: true
+      #     comment-title: TF Plan for app
+      #     directory: infrastructure/terragrunt/env/staging/app
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     terragrunt: true
