--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -1,10 +1,23 @@
-name: Terraform plan
+name: Terraform Apply
 on:
   workflow_dispatch:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
       - "terragrunt/**"
       - ".github/workflows/**"
+      # - ".github/workflows/terragrunt-apply-central.yml"
+      # - "satellite_accounts"
+      # - "terragrunt/aws/central_account/**"
+      # - "terragrunt/aws/cloudtrail/**"
+      # - "terragrunt/env/central/**"
+      # - "terragrunt/env/common/**"
+      # - "terragrunt/env/terragrunt.hcl"
+  # pull_request:
+  #   paths:
+  #     - "terragrunt/**"
+  #     - ".github/workflows/**"
 env:
   TERRAFORM_VERSION: 1.0.7
   TERRAGRUNT_VERSION: v0.31.1
@@ -21,7 +34,7 @@ permissions:
 
 
 jobs:
-  terraform-plan:
+  terraform-apply:
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -34,6 +47,7 @@ jobs:
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false
+
       - name: Install Conftest
         run: |
           wget "https://github.com/open-policy-agent/conftest/releases/download/v${{ env.CONFTEST_VERSION }}/conftest_${{ env.CONFTEST_VERSION }}_Linux_x86_64.tar.gz" \
