--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -9,12 +9,8 @@ env:
   TERRAFORM_VERSION: 1.0.7
   TERRAGRUNT_VERSION: v0.31.1
   CONFTEST_VERSION: 0.27.0
-  # TF_VAR_rds_password: ${{ secrets.TF_VARS_RDS_PASSWORD }}
-  # TF_VAR_fastapi_secret_key: ${{ secrets.TF_VARS_FASTAPI_SECRET_KEY }}
-  # TF_VAR_google_client_id: ${{ secrets.TF_VARS_GOOGLE_CLIENT_ID }}
-  # TF_VAR_google_client_secret: ${{ secrets.TF_VARS_GOOGLE_CLIENT_SECRET }}
-  # TF_VAR_slack_webhook_url: ${{ secrets.TF_VARS_SLACK_WEBHOOK_URL }}
-
+  TF_VAR_contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
+  
 permissions:
   id-token: write
   contents: read
@@ -83,11 +79,11 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           terragrunt: true
 
-      # - name: Terraform plan staging app
-      #   uses: cds-snc/terraform-plan@v2
-      #   with:
-      #     comment-delete: true
-      #     comment-title: TF Plan for app
-      #     directory: infrastructure/terragrunt/env/staging/app
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     terragrunt: true
+      - name: Terraform plan staging app
+        uses: cds-snc/terraform-plan@v2
+        with:
+          comment-delete: true
+          comment-title: TF Plan for app
+          directory: infrastructure/terragrunt/env/staging/app
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          terragrunt: true
