feat: removing typescript for now will revisit later if it's worth it

--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,10 @@
     "generate": "nuxt generate",
     "storybook": "nuxt storybook",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path ../.gitignore .",
-    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path ../.gitignore",
+    "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ../.gitignore",
+    "lint:prettier": "prettier --check .",
     "prepare": "cd .. && husky install app/.husky",
-    "lint": "npm run lint:js && npm run lint:style",
+    "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "test": "jest"
   },
   "dependencies": {
@@ -19,35 +20,33 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@typescript-eslint/parser": "^4.32.0",
     "contentful": "^9.1.4",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
     "nuxt": "^2.15.7",
-    "nuxt-start": "^2.15.8",
-    "typescript": "^4.5.5"
+    "nuxt-start": "^2.15.8"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@babel/eslint-parser": "^7.17.0",
+    "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/storybook": "^4.2.0",
+    "@nuxtjs/storybook": "^4.3.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@vendia/serverless-express": "^4.5.2",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.20.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "husky": "^6.0.0",
     "jest": "^27.0.5",
     "postcss": "^8.4.5",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.1",
     "serverless": "^2.67.0",
     "serverless-apigw-binary": "^0.4.4",
     "serverless-offline": "^8.3.1",
