--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -67,10 +67,10 @@ jobs:
         working-directory: infrastructure/terragrunt/env/staging/hosted-zone
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
 
-      - name: Unlock tfstate
-        working-directory: infrastructure/terragrunt/env/staging/app
-        run: terraform force-unlock -force 6d2153e4-80df-1d66-1439-9dc0d8f5eb5c
+      # - name: Unlock tfstate
+      #   working-directory: infrastructure/terragrunt/env/staging/app
+      #   run: terraform force-unlock -force 6d2153e4-80df-1d66-1439-9dc0d8f5eb5c
 
       - name: Terraform plan staging app
         working-directory: infrastructure/terragrunt/env/staging/app
-        run: terragrunt apply --terragrunt-non-interactive -auto-approve
+        run: terraform force-unlock -force 6d2153e4-80df-1d66-1439-9dc0d8f5eb5c && terragrunt apply --terragrunt-non-interactive -auto-approve
