--- a/app/.prettierignore
+++ b/app/.prettierignore
@@ -1,3 +1,9 @@
+###
+# Place your Prettier ignore content here
+
+###
+# .gitignore content is duplicated here due to https://github.com/prettier/prettier/issues/8506
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
@@ -89,14 +95,5 @@ sw.*
 # Vim swap files
 *.swp
 
-# Terraform
-.terragrunt-cache
-.terraform
-.terraform.lock.hcl
-
-# Contentful
-.contentful.json
-
 # Storybook
 .nuxt-storybook
-storybook-static
