--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "storybook": "nuxt storybook",
+    "storybook:build": "nuxt storybook build",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path ../.gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ../.gitignore",
     "lint:prettier": "prettier --check .",
