feat: a11y scan on new app changes and weekly security scans (#37)
* feat: a11y scan on new app changes and weekly security scans

* chore: specific job name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,13 @@ jobs:
       - name: Run tests 🧪
         working-directory: ${{ matrix.folder }}
         run: npm run test
+
+  a11y-scan:
+    needs: ci
+    name: Run scan websites (a11y)
+    uses: cds-snc/scan-websites/.github/workflows/start_scan.yml@main
+    with:
+      dynamic: false
+    secrets:
+      scan_websites_key: ${{ secrets.SCAN_WEBSITES_KEY }}
+      scan_websites_template: ${{ secrets.SCAN_WEBSITES_TEMPLATE }}
