--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
@@ -30,8 +31,13 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@nuxtjs/eslint-config": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/storybook": "^4.3.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
