--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,24 @@
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
+    "@babel/core": "^7.17.12",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@intlify/nuxt3": "^0.1.10",
     "@nuxtjs/tailwindcss": "^5.0.4",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/vue3": "^6.4.22",
-    "autoprefixer": "^10.4.7",
+    "@storybook/addon-actions": "^6.5.3",
+    "@storybook/addon-essentials": "^6.5.3",
+    "@storybook/addon-interactions": "^6.5.3",
+    "@storybook/addon-links": "^6.5.3",
+    "@storybook/builder-webpack4": "^6.5.3",
+    "@storybook/manager-webpack4": "^6.5.3",
+    "@storybook/testing-library": "^0.0.11",
+    "@storybook/vue3": "^6.5.3",
     "babel-loader": "^8.2.5",
     "nuxt": "3.0.0-rc.3",
-    "nuxt3": "^3.0.0-rc.3-27540667.2886dfd",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
     "vue-loader": "^16.8.3"
   }
 }
