--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@contentful/rich-text-types": "^15.12.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
@@ -25,6 +27,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "contentful": "^9.1.4",
     "core-js": "^3.15.1",
+    "dayjs": "^1.11.2",
     "express": "^4.17.1",
     "nuxt": "^2.15.7",
     "nuxt-start": "^2.15.8"
