--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,11 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint:js": "eslint --ext \".ts,.js,.vue\" --ignore-path ../.gitignore .",
+    "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ../.gitignore",
+    "lint:prettier": "prettier --check .",
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
@@ -16,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@intlify/nuxt3": "^0.1.10",
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.0.4",
     "@storybook/addon-actions": "^6.5.3",
     "@storybook/addon-essentials": "^6.5.3",
@@ -25,8 +30,18 @@
     "@storybook/manager-webpack4": "^6.5.3",
     "@storybook/testing-library": "^0.0.11",
     "@storybook/vue3": "^6.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.16.0",
+    "eslint-plugin-vue": "^9.0.1",
     "nuxt": "3.0.0-rc.3",
+    "prettier": "^2.6.2",
+    "stylelint": "^14.8.5",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
+    "typescript": "^4.7.2",
+    "vite-plugin-eslint": "^1.6.1",
     "vue-loader": "^16.8.3"
   }
 }
