--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "lint:js": "eslint --ext \".ts,.js,.vue\" --ignore-path ../.gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ../.gitignore",
     "lint:prettier": "prettier --check .",
+    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix && npm run lint:style -- --fix",
+    "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "prepare": "cd .. && husky install frontend/.husky"
   },
   "devDependencies": {
