chore: remove fontawesome and try iconify

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@iconify/vue": "^3.2.1",
     "@intlify/nuxt3": "^0.1.10",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.0.4",
@@ -39,6 +35,7 @@
     "eslint-plugin-vue": "^9.0.1",
     "husky": "^8.0.1",
     "nuxt": "3.0.0-rc.3",
+    "nuxt3": "^3.0.0-rc.3-27550969.a4a3cff",
     "prettier": "^2.6.2",
     "stylelint": "^14.8.5",
     "stylelint-config-prettier": "^9.0.3",
