--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,43 +5,45 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "lint:js": "eslint --ext \".ts,.js,.vue\" --ignore-path ../.gitignore .",
-    "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ../.gitignore",
-    "lint:prettier": "prettier --check .",
-    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix && npm run lint:style -- --fix",
+    "lint:js": "eslint --ext \".ts,.js,.vue\" --ignore-path ./.gitignore .",
+    "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ./.gitignore",
+    "lint:prettier": "prettier --check . --ignore-path ./.gitignore",
+    "lintfix": "prettier --write --list-different . --ignore-path ./.gitignore && npm run lint:js -- --fix && npm run lint:style -- --fix",
     "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
-    "prepare": "cd .. && husky install frontend/.husky"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.12",
-    "@iconify/vue": "^3.2.1",
-    "@intlify/nuxt3": "^0.1.10",
+    "@babel/core": "^7.18.2",
+    "@iconify-json/carbon": "^1.1.5",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.0.4",
-    "@storybook/addon-actions": "^6.5.3",
-    "@storybook/addon-essentials": "^6.5.3",
-    "@storybook/addon-interactions": "^6.5.3",
-    "@storybook/addon-links": "^6.5.3",
-    "@storybook/builder-webpack4": "^6.5.3",
-    "@storybook/manager-webpack4": "^6.5.3",
+    "@nuxtjs/tailwindcss": "^5.1.2",
+    "@storybook/addon-actions": "^6.5.6",
+    "@storybook/addon-essentials": "^6.5.6",
+    "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-links": "^6.5.6",
+    "@storybook/builder-vite": "^0.1.35",
     "@storybook/testing-library": "^0.0.11",
-    "@storybook/vue3": "^6.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@storybook/vue3": "^6.5.6",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
     "eslint": "^8.16.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-vue": "^9.0.1",
-    "husky": "^8.0.1",
     "nuxt": "3.0.0-rc.3",
-    "nuxt3": "^3.0.0-rc.3-27550969.a4a3cff",
+    "postcss-html": "^1.4.1",
     "prettier": "^2.6.2",
     "stylelint": "^14.8.5",
     "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^25.0.0",
     "typescript": "^4.7.2",
+    "unplugin-icons": "^0.14.3",
     "vite-plugin-eslint": "^1.6.1",
     "vue-loader": "^16.8.3"
+  },
+  "dependencies": {
+    "@intlify/nuxt3": "^0.1.10"
   }
 }
