--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "lint:js": "eslint --ext \".ts,.js,.vue\" --ignore-path ./.gitignore .",
-    "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ./.gitignore",
-    "lint:prettier": "prettier --check . --ignore-path ./.gitignore",
-    "lintfix": "prettier --write --list-different . --ignore-path ./.gitignore && npm run lint:js -- --fix && npm run lint:style -- --fix",
+    "lint:js": "eslint --ext \".ts,.js,.vue\" --ignore-path ./.eslintignore .",
+    "lint:style": "stylelint \"**/*.{vue,css,html,sass}\" --ignore-path ./.eslintignore",
+    "lint:prettier": "prettier --check . --ignore-path ./.eslintignore",
+    "lintfix": "prettier --write --list-different . --ignore-path ./.eslintignore && npm run lint:js -- --fix && npm run lint:style -- --fix",
     "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
