--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
     "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-vue": "^9.0.1",
     "nuxt": "3.0.0-rc.3",
