--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "lintfix": "prettier --write --list-different . --ignore-path ./.eslintignore && npm run lint:js -- --fix && npm run lint:style -- --fix",
     "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@iconify-json/carbon": "^1.1.5",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.3-27567768.c1f728e",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.1.2",
     "@storybook/addon-actions": "^6.5.6",
@@ -43,6 +46,7 @@
     "typescript": "^4.7.2",
     "unplugin-icons": "^0.14.3",
     "vite-plugin-eslint": "^1.6.1",
+    "vitest": "^0.13.1",
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
