--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
     "@babel/core": "^7.18.2",
     "@iconify-json/carbon": "^1.1.5",
     "@nuxt/test-utils-edge": "^3.0.0-rc.3-27567768.c1f728e",
-    "@nuxt/vite-builder": "^3.0.0-rc.3",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.1.2",
     "@storybook/addon-actions": "^6.5.6",
@@ -51,7 +50,6 @@
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
-    "@intlify/nuxt3": "^0.1.10",
-    "nuxt3": "^3.0.0-rc.3-27567768.c1f728e"
+    "@intlify/nuxt3": "^0.1.10"
   }
 }
