--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -10,7 +10,9 @@ env:
   TERRAGRUNT_VERSION: v0.31.1
   CONFTEST_VERSION: 0.27.0
   TF_VAR_contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
-  
+  TF_VAR_gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
+
+
 permissions:
   id-token: write
   contents: read
