--- a/.github/workflows/axe.yml
+++ b/.github/workflows/axe.yml
@@ -14,16 +14,17 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        os: [ubuntu-latest]
+        node: [14]
         folder: ["app"]
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Setup node env 🏗
+        uses: actions/setup-node@v2.1.5
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node }}
           cache: "npm"
 
       - run: npm ci
