--- a/.github/workflows/axe.yml
+++ b/.github/workflows/axe.yml
@@ -30,7 +30,7 @@ jobs:
       - run: npm ci
         working-directory: ${{ matrix.folder }}
 
-      - run: npm run build --if-present
+      - run: npm run start
 
       - run: npm start & npx wait-on http://localhost:3000
 
