--- a/.github/workflows/axe.yml
+++ b/.github/workflows/axe.yml
@@ -30,9 +30,11 @@ jobs:
       - run: npm ci
         working-directory: ${{ matrix.folder }}
 
-      - run: npm run start
+      - run: npm run build --if-present
+        working-directory: ${{ matrix.folder }}
 
       - run: npm start & npx wait-on http://localhost:3000
+        working-directory: ${{ matrix.folder }}
 
       - name: Run axe
         run: |
