--- a/.github/workflows/axe.yml
+++ b/.github/workflows/axe.yml
@@ -15,6 +15,9 @@ on:
 jobs:
   a11y-axe:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        working-directory: ${{ matrix.folder }}
 
     strategy:
       matrix:
@@ -41,7 +44,6 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies 👨🏻‍💻
-        working-directory: ${{ matrix.folder }}
         run: npm ci --prefer-offline --no-audit
 
       - name: Run build
@@ -49,15 +51,13 @@ jobs:
           contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
         run: |
           pwd
-          ls -l
+          cp .contentful.json.sample .contentful
           npm run build --if-present
 
       - name: Start and wait ⏳
-        working-directory: ${{ matrix.folder }}
         run: npm start & npx wait-on http://localhost:3000
 
       - name: Run accessibility tests (axe) 🪓
-        working-directory: ${{ matrix.folder }}
         run: |
           npm install -g @axe-core/cli
           axe http://localhost:3000 --exit
