--- a/.github/workflows/axe.yml
+++ b/.github/workflows/axe.yml
@@ -51,7 +51,7 @@ jobs:
           contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
         run: |
           pwd
-          cp .contentful.json.sample .contentful
+          cp .contentful.json.sample .contentful.json
           npm run build --if-present
 
       - name: Start and wait ⏳
