--- a/.github/workflows/ci-v3.yaml
+++ b/.github/workflows/ci-v3.yaml
@@ -1,4 +1,4 @@
-name: ci
+name: ci-v3
 
 on:
   push:
@@ -7,20 +7,20 @@ on:
       - master
   pull_request:
     paths:
-      - app/*
+      - frontend/*
     branches:
       - main
       - master
 
 jobs:
-  ci:
+  ci-v3:
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [14]
-        folder: ["app"]
+        node: [16]
+        folder: ["frontend"]
 
     steps:
       - name: Checkout 🛎
@@ -53,7 +53,7 @@ jobs:
         run: npm run test
 
   a11y-scan:
-    needs: ci
+    needs: ci-v3
     name: Run scan websites (a11y)
     uses: cds-snc/scan-websites/.github/workflows/start_scan.yml@main
     with:
