--- a/app/package.json
+++ b/app/package.json
@@ -69,6 +69,7 @@
     "stylelint-config-standard": "^22.0.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.6.4",
+    "vue-gtag": "^1.16.1",
     "vue-jest": "^3.0.4",
     "webpack": "^4.46.0"
   }
