--- a/app/package.json
+++ b/app/package.json
@@ -43,7 +43,6 @@
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/storybook": "^4.3.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
@@ -69,6 +68,7 @@
     "stylelint-config-standard": "^22.0.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.6.4",
+    "vue-gtag": "^1.16.1",
     "vue-jest": "^3.0.4",
     "webpack": "^4.46.0"
   }
