--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/router": "^1.7.0",
     "contentful": "^9.1.4",
     "core-js": "^3.15.1",
     "dayjs": "^1.11.2",
