--- a/customHttp.yml
+++ b/customHttp.yml
@@ -10,4 +10,4 @@ customHeaders:
       - key: 'X-Content-Type-Options'
         value: 'nosniff'
       - key: 'Content-Security-Policy'
-        value: "default-src 'self'; script-src 'self' www.googletagmanager.com cdn.jsdelivr.net; frame-src www.googletagmanager.com cdn.jsdelivr.net; connect-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'"
+        value: "default-src 'self'; script-src 'self' www.googletagmanager.com cdn.jsdelivr.net/npm/workbox-cdn@5.1.4/workbox/workbox-sw.js; frame-src www.googletagmanager.com cdn.jsdelivr.net/npm/workbox-cdn@5.1.4/workbox/workbox-sw.js; connect-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'"
