--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@contentful/rich-text-html-renderer": "^15.13.1",
     "@contentful/rich-text-types": "^15.12.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@gtm-support/vue2-gtm": "^1.3.0",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
