ci: add tf vars to gh actions

--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -15,6 +15,7 @@ env:
   TF_VAR_contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
   TF_VAR_gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
   TF_VAR_google_analytics_id: ${{ secrets.GOOGLE_ANALYTICS_ID }}
+  TF_VAR_google_tag_manager_id: ${{ secrets.GOOGLE_TAG_MANAGER_ID }}
 
 
 permissions:
