--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,14 @@ on:
     branches:
       - main
       - master
+      - staging
   pull_request:
     paths:
       - app/*
     branches:
       - main
       - master
+      - staging
 
 jobs:
   ci:
