--- a/.github/workflows/ci-v3.yaml
+++ b/.github/workflows/ci-v3.yaml
@@ -5,12 +5,14 @@ on:
     branches:
       - main
       - master
+      - staging
   pull_request:
     paths:
       - frontend/*
     branches:
       - main
       - master
+      - staging
 
 jobs:
   ci-v3:
