--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - staging
     paths:
       - "terragrunt/**"
       - ".github/workflows/**"
@@ -15,6 +16,7 @@ env:
   TF_VAR_contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
   TF_VAR_gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
   TF_VAR_google_analytics_id: ${{ secrets.GOOGLE_ANALYTICS_ID }}
+  TF_VAR_google_tag_manager_id: ${{ secrets.GOOGLE_TAG_MANAGER_ID }}
 
 
 permissions:
