--- a/app/.contentful.json.sample
+++ b/app/.contentful.json.sample
@@ -1,5 +1,4 @@
 {
-   "CTF_PERSON_ID": "",
-   "CTF_BLOG_POST_TYPE_ID": "blogPost",
-   "CTF_SPACE_ID": "zy72kv0qwyyq"
+   "CTF_SPACE_ID": "zy72kv0qwyyq",
+   "CTF_CDA_ACCESS_TOKEN": ""
 }
