feat: wip contentful preview

--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -14,6 +14,7 @@ env:
   TERRAGRUNT_VERSION: v0.31.1
   CONFTEST_VERSION: 0.27.0
   TF_VAR_contentful_cda_access_token: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
+  TF_VAR_contentful_cpa_access_token: ${{ secrets.CONTENTFUL_CPA_ACCESS_TOKEN }}
   TF_VAR_gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
   TF_VAR_google_analytics_id: ${{ secrets.GOOGLE_ANALYTICS_ID }}
   TF_VAR_google_tag_manager_id: ${{ secrets.GOOGLE_TAG_MANAGER_ID }}
