--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/router": "^1.7.0",
+    "@nuxtjs/sentry": "^6.0.1",
     "@nuxtjs/vuetify": "^1.12.3",
     "contentful": "^9.1.4",
     "core-js": "^3.15.1",
