--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,8 @@
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/router": "^1.7.0",
+    "@nuxtjs/sentry": "^6.0.1",
+    "@nuxtjs/vuetify": "^1.12.3",
     "contentful": "^9.1.4",
     "core-js": "^3.15.1",
     "dayjs": "^1.11.2",
@@ -48,7 +50,7 @@
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/storybook": "^4.3.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
-    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/tailwindcss": "^5.3.3",
     "@vendia/serverless-express": "^4.5.2",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
